# KursPy_3

./: main.py  pyproject.toml
data/: dadabase.ini
src/: DB_class.py  api_class.py  config.py  utils.py  vacancy.py
